Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117932

Crash in texture orphanage

    XMLWordPrintable

Details

    • Linux/Wayland
    • eb1a83ea9 (dev), 251202732 (6.6), 693bc6994 (tqtc/lts-6.5)

    Description

      Run the attached appman project (appman -c am-config.yaml) and close both windows. Most of the time there will be "ASSERT: "ctx != nullptr" in file qtwayland/src/compositor/hardware_integration/qwltextureorphanage.cpp, line 77". In release builds it will just crash with a segmentation fault. There seems to be a race, since it's not 100% reproducible. Unfortunately, I don't have a smaller example with plain QtWayland.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            nicolauz Thomas Senyk
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes