Fix regression in orphaned texture clean-up

The recently refactored QWaylandTextureOrphanage
used sender() in a DirectionConnection,
which doesn't work if sender and receiver live in
different threads - which happens if multiple windows
(and therefor multiple QSGRenderThread) exist

This patch fixed that by replacing sender()
with a lambda capture

Also: fix a weirdly phrased comment

Fixes: QTBUG-117932
Change-Id: I870e92b448dfd1f9864ff94743cf7accc50fc6ff
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit eb1a83ea9bb145d72a23f925002c9e9a745c110e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>